[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
der = { git = "https://github.com/DaviRain-Su/formats.git", branch = "davi/dev" }
# num-bigint-dig = { git = "https://github.com/DaviRain-Su/num-bigint.git", branch = "davi/dev" }
