[package]
name = "solana-ibc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ibc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ibc = { version = "0.44.1", git = "https://github.com/DaviRain-Su/ibc-rs.git", branch = "davi/dev" }
ibc-proto = "0.32.1"
