[package]
name = "solana-ibc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ibc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ibc = { version = "0.44.1", default-features = false }
ibc-proto = { version = "0.32.1", default-features = false }
